test/bad/classes/struct11.px

class A def
    x: Int

    getter: ()->Int = lambda: this.x
